Bug 40449 - SPELLCHECK does not recognize text language
Summary: SPELLCHECK does not recognize text language
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Linguistic (show other bugs)
Version:
(earliest affected)
Master old -3.6
Hardware: All Windows (All)
: medium major
Assignee: Caolán McNamara
URL:
Whiteboard: (target:3.5.0)
Keywords: regression
: 39365 (view as bug list)
Depends on:
Blocks: mab3.5
  Show dependency treegraph
 
Reported: 2011-08-29 01:26 UTC by Rainer Bielefeld Retired
Modified: 2012-08-14 08:14 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample document, pls see original report! (104.34 KB, application/vnd.oasis.opendocument.text)
2011-08-29 01:26 UTC, Rainer Bielefeld Retired
Details
Modified sample document (104.40 KB, application/vnd.oasis.opendocument.text)
2011-09-03 15:45 UTC, manj_k
Details
how it looks for me (232.38 KB, image/png)
2011-09-06 08:55 UTC, Caolán McNamara
Details
Screen shot LibO-dev 3.5.0 mixed-language spell checking is inconsistent on OSX 10.6.8. (429.37 KB, application/zip)
2011-10-04 05:20 UTC, rk601
Details
Mixed Language Screen-shot Example (130.21 KB, image/png)
2011-10-04 05:41 UTC, rk601
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rainer Bielefeld Retired 2011-08-29 01:26:48 UTC
Created attachment 50647 [details]
Sample document, pls see original report!

Observed with Master "LibO-dev 3.5.0 – WIN7 Home Premium (64bit) English UI [(Build ID: f952331-4eb4f62-09af278)]"

Steps to reproduce:
1. Open attached sample document
2. Activate auto spell check
   Expected: German words underlined
   Actual: no underline

Checking dialogs (see screenshots in document) shows that Spell check does not recognize text language.

Might have same roots like "Bug 39365 - Spell check does not work after copy / paste, modified language not recognized"
Comment 1 manj_k 2011-09-03 15:43:53 UTC
[LibO-dev 3.5.0 
Build ID: 3b32204-7f92fce-2ba0a9f
on WinXP 32b]

The effect is reproducible. 
I think the text language is recognized, but spell check is fatally broken.
It seems that only the first word of a paragraph (if misspelled) is recognized (as misspelled) when opening a document.

I've modified the first paragraph of your sample document to 'Diees ist ein Text'.
'Diees' will be recognized as misspelled ('dies' is a correct English word).

Furthermore, you will get 'ist' marked as misspelled, if you modify the following word 'ein' to 'eiin', etc.

To show it more clearly, I've also modified the second paragraph to 'Thiis is a text'.
Comment 2 manj_k 2011-09-03 15:45:33 UTC
Created attachment 50879 [details]
Modified sample document
Comment 3 manj_k 2011-09-04 02:27:52 UTC
For more weird experiences:
Take a misspelled sentence like 'Tey merly feel glomy and suspicous.' 
[Correct: 'They merely feel gloomy and suspicious.]

- type the sentence
- copy and paste it (as a new paragraph / into an existing paragraph)
- insert/remove punctuation marks (full stop)
- add/remove a space after a misspelled word
- select the sentence, apply another paragraph style
- edit the text
etc.

Spell check is pretty messed up.
[On the other hand: OK with LibO 3.3.4 release / 3.4.3 release]
Comment 4 Rainer Bielefeld Retired 2011-09-04 05:18:26 UTC
CONFIRMED due to comments
Comment 5 Rainer Bielefeld Retired 2011-09-06 07:51:16 UTC
My current results with Server installation of Master "LibO-dev 3.5.0 – WIN7 Home Premium (64bit) English UI [(Build ID:  3b32204-7f92fce-2ba0a9f)]": first sample still shows the problem, second does not.

This is a major one, WRITER without any spell check - unimaginable!

@Caolan:
I saw you active in some Linguistic Component SPELL check bugs. Please feel free to reassign (or reset Assignee to default) if it’s not your area or if provided information is not sufficient. Please set Status to ASSIGNED if you accept this Bug.
Comment 6 Caolán McNamara 2011-09-06 08:55:48 UTC
Created attachment 50938 [details]
how it looks for me
Comment 7 Caolán McNamara 2011-09-06 08:59:00 UTC
The initial reports sound a bit like the problem fixed by

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c7c62c71144d9758a5f1d5f33734d4025e31a920

but that fix should be in the build mentioned in #5 unless it had an effect on the configuration of a previously installed dev milestone or something. Can you blow away your AppData/Libo-Dev (or whatever it exactly is under windows) and see if the auto-spell still fails horribly ?
Comment 8 Rainer Bielefeld Retired 2011-09-06 09:42:31 UTC
@Caolán:
I use new separate AppData for every master build. To be sure I renamed all AppData user profiles on my hard disk including the "settings" folder for my current Master and tried again with my current Server installation of Master "LibO-dev 3.5.0 – WIN7 Home Premium (64bit) English UI [(Build ID:  3b32204-7f92fce-2ba0a9f)]".

I can not reproduce your good result, in my "sample_001.odt" still only the German misspelled works "Diees" and "Thiis" are underlined because misspelled. All text is shown "English" in Character Format dialog.

But I am a little worried concerning my AppData user profile deleting, when I reopened LibO Master after renaming, it still opened in the folder for the sample documents, not in some default. I do not know where that "latest visited" info is stored? but "recent document" list was empty.

Many words short sense - for me the problem still exists.
Comment 9 Caolán McNamara 2011-09-07 00:50:21 UTC
There are possibly two, maybe one, bugs here. The first is the auto-spellchecking which I can't reproduce. The second is the ridiculous claim by the spell-checking dialog that the spell-check is complete which happens sometimes.

The second at least I can reproduce and is because of an uninitialized variable causing the spellchecker to think the text is in a symbol-font and therefore shouldn't be spell-checked by the dialog.
Comment 10 Caolán McNamara 2011-09-07 01:03:14 UTC
http://cgit.freedesktop.org/libreoffice/core/commit/?id=c346afa762ea6f71614b82b57c142451db3b7b50 should fix the spell-checking *dialog* anyway. 

Though seeing as I can't see the auto-spell problem it may be unchanged by that
Comment 11 Caolán McNamara 2011-09-07 04:04:05 UTC
I can see the other problem on windows alright.
Comment 12 Caolán McNamara 2011-09-08 08:07:55 UTC
grr, must be another class of uninitialized variable seeing as I can reproduce it, up until I build with debugging symbols at which point it goes away.
Comment 13 Caolán McNamara 2011-09-08 13:14:51 UTC
gotcha, writer's spell-checker impl took a reference to a temporary. That's got to be it.

http://cgit.freedesktop.org/libreoffice/core/commit/?id=11df18b7a92fb02ea7decd594485e8c73fe61278
Comment 14 Caolán McNamara 2011-09-08 13:24:23 UTC
*** Bug 39365 has been marked as a duplicate of this bug. ***
Comment 15 manj_k 2011-09-17 14:50:37 UTC
Verified with
LibO Master - LibO-dev 3.5.0 Build ID: 8cc839d-3dca5fd-4525197
[master~2011-09-12_16.09.34_LibO-Dev_OOO350m1_Win_x86_install_en-US.exe].

Spell check works fine again.
Comment 16 Cor Nouws 2011-09-18 01:57:46 UTC
I test in Build ID: 91a7e5a-3dca5fd-da627d2 on Linux.
Indeed: it works with a fresh user profile.
But using an older user profile, the spelling still does not work..
Comment 17 Caolán McNamara 2011-09-19 01:27:00 UTC
caolan->cno: Can you write me a new bug for your problem rather than doubling up here. The bug I fixed here wouldn't be affected by profiles or previous settings. So if something persists for you with older-profiles it something else.
Comment 18 Caolán McNamara 2011-09-19 01:30:04 UTC
let close this, affected windows most, bug.

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ebe0549d2688a4d44b6527993c7f6a1fc58c64cc is the unit test which should make it impossible for this specific one happen again
Comment 19 rk601 2011-10-04 05:20:23 UTC
Created attachment 51933 [details]
Screen shot LibO-dev 3.5.0 mixed-language spell checking is inconsistent on OSX 10.6.8.

Open Attached Sample document (based on original "sample1.odt"), please see the original report!

LibO-dev 3.5.0 mixed-language spell checking is inconsistent on OSX 10.6.8. please see the following:

LibO-dev 3.5.0 
Build ID: fdbe98e-3f7a742-4eb4f62-260b7c1
On OSX 10.6.8

Located at:

http://dev-builds.libreoffice.org/daily/MacOSX_10.6.7_Intel_no-moz/master/2011-10-01_13.36.19/

with

master~2011-10-01_13.36.19_LibO-Dev_OOO350m1_MacOS_x86_install_en-US.dmg

LibO-dev 3.5.0 mixed-language spell checking is inconsistent on OSX 10.6.8.

Please follow these steps to reproduce:

1. Open attached sample document
2. Activate auto spell check
   Expected: English/German words underlined
   Actual: inconsistent underlining

Checking dialogs (see screenshots in document) shows that Spell Check is inconsistent or at least gets confused with English/German and does not recognize text language.

Might have same roots like "Bug 39365 - Spell check does not work after copy / paste, modified language not recognized"
Comment 20 Caolán McNamara 2011-10-04 05:36:34 UTC
please don't reopen a bug when you're not 100% sure its the same problem. Open a new one. this one got fixed, even if you're one seems to be similar
Comment 21 rk601 2011-10-04 05:41:12 UTC
Created attachment 51934 [details]
Mixed Language Screen-shot Example

It appears that uppercase words are another mixed language example. See words within the red rectangle within the attachment.
Comment 22 rk601 2011-10-04 05:51:17 UTC
(In reply to comment #20)
> please don't reopen a bug when you're not 100% sure its the same problem. Open
> a new one. this one got fixed, even if you're one seems to be similar

Please see Bug 41447.
Comment 23 Björn Michaelsen 2011-12-23 13:23:43 UTC
Since all new unconfirmed bugs start in state UNCONFIRMED now and old unconfirmed bugs were moved to NEEDINFO with a explanatory comment, all bugs promoted above those bug states to NEW and later are automatically confirmed making the CONFIRMED whiteboard status redundant. Thus it will be removed.
Comment 24 Rainer Bielefeld Retired 2012-08-14 08:14:10 UTC
Target due to comment 15