Resolves/Related: fdo#40449 uninitialized issymbol member variable